# nastro

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: custom-icon.js  custom.css  version_switcher.json
docs/source/_templates/: searchbox.html  sidebar-nav-bs.html
docs/source/_templates/autosummary/: class.rst
docs/source/reference/: catalog.rst  constants.rst  index.rst  plots.rst  types.rst
docs/source/user/: index.rst
src/cpp/: CMakeLists.txt
src/nastro/: __init__.py  catalog.py  constants.py  paths.py
src/nastro/analytical/: __init__.py  analytical.py  enrke.py
src/nastro/data/: __init__.py  formats.py
src/nastro/data/sources/: eop.npy
src/nastro/estimation/: sensors.py  types.py
src/nastro/forces/: __init__.py  apparent.py  base.py  gravity.py
src/nastro/frames/: __init__.py  earth_orientation.py  frames.py  reference_frames.py  state.py
src/nastro/frames/data/: xys.npy
src/nastro/plots/: __init__.py  astro.py  core.py  subplots.py
src/nastro/solvers/: __init__.py  base.py  euler.py  rk.py
src/nastro/types/: __init__.py  conversion.py  core.py  newstate.py  state.py  state_wrong.py  time.py
tests/data/: epochs.npy
tests/plots/: astro.py  boundaries.py  histogram.py  legends.py  orbit.py  simple_figure.py  test_setup.py  ticks.py
tests/types/: test_CartesianState.py  test_conversions.py  test_core.py  test_derived.py  test_generic.py  test_io.py  test_state_conversions.py  test_time.py  test_type_basics.py
